--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-for-designers",
-  "homepage": "https://gideonibemerejr.github.io/js-for-designers",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
